tests/valid_inputs/bin_right_shift.cpp
// test '>>'

int main() {
	return 168 >> 2;
}
