tests/invalid_inputs/sema/break_level_too_big.cpp


int main() {
	while(true)
		break 2;
}
